--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <title>두희랑 슬아랑 결혼합니다</title>
 
+    <meta property="og:title" content="두희♡슬아 결혼합니다"/>
+    <meta property="og:description" content="2020년 9월 26일 - 세빛섬 플로팅 아일랜드"/>
+    <meta property="og:image" content="img/portfolio/cabin.png"/>
+
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
