--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="2020년 9월 26일 - 세빛섬 플로팅 아일랜드">
     <meta name="author" content="">
 
-    <title>두희랑 슬아랑 결혼합니다</title>
+    <title>두희♡슬아 결혼합니다</title>
 
-    <meta property="og:title" content="두희♡슬아 결혼합니다"/>
-    <meta property="og:description" content="2020년 9월 26일 - 세빛섬 플로팅 아일랜드"/>
     <meta property="og:image" content="img/portfolio/cabin.png"/>
 
     <!-- Bootstrap Core CSS -->
