--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="2020년 9월 26일 - 세빛섬 플로팅 아일랜드">
+    <meta name="image" content="img/portfolio/cabin.png"/>
     <meta name="author" content="">
 
     <title>두희♡슬아 결혼합니다</title>
 
+    <meta property="og:title" content="두희♡슬아 결혼합니다">
+    <meta property="og:description" content="2020년 9월 26일 - 세빛섬 플로팅 아일랜드">
     <meta property="og:image" content="img/portfolio/cabin.png"/>
 
     <!-- Bootstrap Core CSS -->
