--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/1.JPG" alt="">
+                    <img class="img-responsive" src="img/portfolio/1.JPG" alt="">
                     <div class="intro-text">
                         <h1 class="name">두희 슬아 결혼합니다</h1>
                         <hr class="star-light">
