--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <script type='text/javascript'>
                 //<![CDATA[
                 // // 사용할 앱의 JavaScript 키를 설정해 주세요.
-                Kakao.init('YOUR APP KEY');
+                Kakao.init('3a1a76bca71b05bc7544d7e6ab7cd6bf');
                 // // 카카오링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
                 Kakao.Link.createDefaultButton({
                     container: '#kakao-link-btn',
