--- a/index.html
+++ b/index.html
@@ -205,22 +205,22 @@
                 Kakao.Link.createDefaultButton({
                     container: '#kakao-link-btn',
                     objectType: 'location',
-                    address: '경기 성남시 분당구 판교역로 235 에이치스퀘어 N동 8층',
-                    addressTitle: '카카오 판교오피스 카페톡',
+                    address: '세빛섬 플로팅 아일랜드',
+                    addressTitle: '세빛섬 플로팅 아일랜드',
                     content: {
-                    title: '신메뉴 출시♥︎ 체리블라썸라떼',
-                    description: '이번 주는 체리블라썸라떼 1+1',
-                    imageUrl: 'http://mud-kage.kakao.co.kr/dn/bSbH9w/btqgegaEDfW/vD9KKV0hEintg6bZT4v4WK/kakaolink40_original.png',
+                    title: '슬아 ♥︎ 두희 결혼합니다.',
+                    description: '2020년 9월 26일 세빛섬 플로팅 아일랜드',
+                    imageUrl: 'img/portfolio/3.JPG',
                     link: {
                         mobileWebUrl: 'https://developers.kakao.com',
                         webUrl: 'https://developers.kakao.com'
-                    }
-                    },
-                    social: {
-                    likeCount: 286,
-                    commentCount: 45,
-                    sharedCount: 845
-                    },
+                    }},
+                    // 
+                    // social: {
+                    // likeCount: 286,
+                    // commentCount: 45,
+                    // sharedCount: 845
+                    // },
                     buttons: [
                     {
                         title: '웹으로 보기',
