fix kakao button

--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
                     link: {
                         mobileWebUrl: 'https://developers.kakao.com',
                         webUrl: 'https://developers.kakao.com'
-                    }},
-                    // 
-                    // social: {
-                    // likeCount: 286,
-                    // commentCount: 45,
-                    // sharedCount: 845
-                    // },
+                    }
+                    },
+                    social: {
+                    likeCount: 286,
+                    commentCount: 45,
+                    sharedCount: 845
+                    },
                     buttons: [
                     {
                         title: '웹으로 보기',
