fix kakao button

--- a/index.html
+++ b/index.html
@@ -205,28 +205,23 @@
                 Kakao.Link.createDefaultButton({
                     container: '#kakao-link-btn',
                     objectType: 'location',
-                    address: '세빛섬 플로팅 아일랜드',
+                    address: '서울 서초구 올림픽대로 683 세빛둥둥섬',
                     addressTitle: '세빛섬 플로팅 아일랜드',
                     content: {
                     title: '슬아 ♥︎ 두희 결혼합니다.',
                     description: '2020년 9월 26일 세빛섬 플로팅 아일랜드',
-                    imageUrl: 'img/portfolio/3.JPG',
+                    imageUrl: 'https://duhui-s2-seula.github.io/img/portfolio/3.JPG',
                     link: {
-                        mobileWebUrl: 'https://developers.kakao.com',
-                        webUrl: 'https://developers.kakao.com'
+                        mobileWebUrl: 'https://duhui-s2-seula.github.io',
+                        webUrl: 'https://duhui-s2-seula.github.io'
                     }
-                    },
-                    social: {
-                    likeCount: 286,
-                    commentCount: 45,
-                    sharedCount: 845
                     },
                     buttons: [
                     {
-                        title: '웹으로 보기',
+                        title: '청첩장 보기',
                         link: {
-                        mobileWebUrl: 'https://developers.kakao.com',
-                        webUrl: 'https://developers.kakao.com'
+                        mobileWebUrl: 'https://duhui-s2-seula.github.io',
+                        webUrl: 'https://duhui-s2-seula.github.io'
                         }
                     }
                     ]
