--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 Kakao.Link.createDefaultButton({
                     container: '#kakao-link-btn',
                     objectType: 'location',
-                    address: '서울 서초구 올림픽대로 683 세빛둥둥섬',
+                    address: '서울 서초구 올림픽대로 683 세빛둥둥섬 플로팅아일랜드',
                     addressTitle: '세빛섬 플로팅 아일랜드',
                     content: {
                     title: '슬아 ♥︎ 두희 결혼합니다.',
