--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="container">
 
             <div class="row">
-                <div id="map" style="width:100%;height:400px;vertical-align: middle;"></div>
+                <div id="map" style="width:400px;height:400px;vertical-align: middle;"></div>
                 <script>
                     var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
                         mapOption = { 
